test/error/parser_files/def_binder_sep.err
File "parser_files/def_binder_sep.st", line 1, characters 7-9:
1 | f x y => x.
          ^^
Error: Syntax error.
Hint: Incorrect function definition, after binders use separator ':='.
      Please write:
      f x y := ...
